# mlcore

./: .gitignore  README.md  pyproject.toml
src/mlcore/: dataset.py  eval.py  models.py  training.py
src/mlcore/dataset/: dataset.py  yaml_constructors.py
