[project]
name = "mlcore"
version = "0.0.1"
authors = [
  { name="Josh Breckenridge"},
]
description = "Contains reusable functionality to support ML work with MKID readout"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
